--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.imooc</groupId>
-    <artifactId>imooc-hire-dev</artifactId>
+    <artifactId>myhire</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <modules>
