--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.3</version>
+        <relativePath />
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.imooc</groupId>
@@ -37,13 +44,6 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.3</version>
-        <relativePath />
-    </parent>
-
     <!--
         使用dependencyManagement的目的是为了保证当前父工程的干净，
         也就是说父工程他只负责对依赖（坐标）的管理，以及依赖的版本管理，而不会去引入额外的jar依赖
@@ -52,6 +52,24 @@
     -->
     <dependencyManagement>
         <dependencies>
+            <!-- 引入微服务 spring-cloud-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>2021.0.4</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- 引入微服务组件 spring-cloud-alibaba -->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2021.0.1.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!-- mysql 驱动 -->
             <dependency>
                 <groupId>mysql</groupId>
@@ -82,10 +100,15 @@
                 <version>1.4.1</version>
             </dependency>
 
+            <!--            <dependency>-->
+            <!--                <groupId>org.mongodb</groupId>-->
+            <!--                <artifactId>mongodb-driver</artifactId>-->
+            <!--                <version>3.12.11</version>-->
+            <!--            </dependency>-->
             <dependency>
                 <groupId>org.mongodb</groupId>
-                <artifactId>mongodb-driver</artifactId>
-                <version>3.12.11</version>
+                <artifactId>mongodb-driver-sync</artifactId>
+                <version>4.5.0</version>
             </dependency>
 
             <!-- zookeeper -->
@@ -129,13 +152,12 @@
                 <version>2.10.2</version>
             </dependency>
 
-
             <!-- 百度api -->
-            <dependency>
-                <groupId>com.baidu.aip</groupId>
-                <artifactId>java-sdk</artifactId>
-                <version>4.16.8</version>
-            </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>com.baidu.aip</groupId>-->
+            <!--                <artifactId>java-sdk</artifactId>-->
+            <!--                <version>4.16.8</version>-->
+            <!--            </dependency>-->
 
             <!-- apache 工具类 -->
             <dependency>
@@ -173,11 +195,11 @@
             </dependency>
 
             <!-- joda-time 时间工具 -->
-            <dependency>
-                <groupId>joda-time</groupId>
-                <artifactId>joda-time</artifactId>
-                <version>2.10.6</version>
-            </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>joda-time</groupId>-->
+            <!--                <artifactId>joda-time</artifactId>-->
+            <!--                <version>2.10.6</version>-->
+            <!--            </dependency>-->
 
             <!-- knife4j 接口文档工具 -->
             <dependency>
@@ -185,52 +207,52 @@
                 <artifactId>knife4j-spring-boot-starter</artifactId>
                 <version>2.0.9</version>
             </dependency>
-            <dependency>
-                <groupId>com.github.xiaoymin</groupId>
-                <artifactId>knife4j-springdoc-ui</artifactId>
-                <version>3.0.3</version>
-            </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>com.github.xiaoymin</groupId>-->
+            <!--                <artifactId>knife4j-springdoc-ui</artifactId>-->
+            <!--                <version>3.0.3</version>-->
+            <!--            </dependency>-->
 
             <!-- MinIO -->
             <dependency>
                 <groupId>io.minio</groupId>
                 <artifactId>minio</artifactId>
-                <version>8.2.1</version>
+                <version>8.4.5</version>
             </dependency>
 
             <!-- 视频处理 -->
-            <dependency>
-                <groupId>com.googlecode.soundlibs</groupId>
-                <artifactId>mp3spi</artifactId>
-                <version>1.9.5.4</version>
-            </dependency>
-            <dependency>
-                <groupId>org.bytedeco</groupId>
-                <artifactId>javacv</artifactId>
-                <version>1.5.1</version>
-            </dependency>
-            <dependency>
-                <groupId>org.bytedeco</groupId>
-                <artifactId>ffmpeg-platform</artifactId>
-                <version>4.1.3-1.5.1</version>
-            </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>com.googlecode.soundlibs</groupId>-->
+            <!--                <artifactId>mp3spi</artifactId>-->
+            <!--                <version>1.9.5.4</version>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.bytedeco</groupId>-->
+            <!--                <artifactId>javacv</artifactId>-->
+            <!--                <version>1.5.1</version>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.bytedeco</groupId>-->
+            <!--                <artifactId>ffmpeg-platform</artifactId>-->
+            <!--                <version>4.1.3-1.5.1</version>-->
+            <!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
 
-    <!--<build>-->
-        <!--<finalName>${project.artifactId}</finalName>-->
-        <!--<plugins>-->
-            <!--&lt;!&ndash; Java 编译 &ndash;&gt;-->
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-compiler-plugin</artifactId>-->
-                <!--<configuration>-->
-                    <!--<source>1.8</source>-->
-                    <!--<target>1.8</target>-->
-                    <!--<encoding>UTF-8</encoding>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-        <!--</plugins>-->
-    <!--</build>-->
+    <build>
+        <finalName>${project.artifactId}</finalName>
+        <plugins>
+            <!-- Java 编译 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
